# apex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  TODO.md  apex.toml  flake.nix  install.sh
.cargo/: config.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
.fleet/: bridge.yaml
HomebrewFormula/: apex.rb
agents/: README.md  (+6 more)
crates/apex-agent/: Cargo.toml
crates/apex-agent/src/: adversarial.rs  bandit.rs  classifier.rs  complexity_estimator.rs  driller.rs  ensemble.rs  exchange.rs  ledger.rs  lib.rs  monitor.rs  mutation_guide.rs  orchestrator.rs  priority.rs  router.rs  source.rs  test_harness.rs
crates/apex-cli/: Cargo.toml
crates/apex-cli/src/: agent_dispatch.rs  attest.rs  ci_report.rs  doctor.rs  fuzz.rs  integrate.rs  lib.rs  main.rs  mcp.rs  toolchain.rs  wrap.rs
crates/apex-cli/tests/: integration_harness.rs  integration_test.rs  subcommand_tests.rs  v040_integration.rs
crates/apex-concolic/: Cargo.toml
crates/apex-concolic/src/: boundary.rs  c_conditions.rs  condition_tree.rs  csharp_conditions.rs  go_conditions.rs  java_conditions.rs  js_conditions.rs  lib.rs  python.rs  ruby_conditions.rs  rust_conditions.rs  search.rs  selective.rs  static_strategy.rs  swift_conditions.rs  symcc.rs  taint.rs
crates/apex-core/: Cargo.toml
crates/apex-core/src/: agent_report.rs  cache.rs  command.rs  config.rs  formats.rs  lib.rs  llm.rs  path_shim.rs  probe.rs  traits.rs  types.rs
crates/apex-coverage/: Cargo.toml
crates/apex-coverage/src/: compound.rs  heuristic.rs  lib.rs  mutation.rs  oracle.rs  oracle_gap.rs  semantic.rs
crates/apex-cpg/: Cargo.toml
crates/apex-cpg/src/: architecture.rs  builder.rs  deepdfa.rs  lib.rs  reaching_def.rs  ssa.rs  taint.rs  taint_flows_store.rs  taint_rules.rs  taint_store.rs  taint_summary.rs  taint_triage.rs  ts_go.rs  ts_javascript.rs  ts_python.rs  type_taint.rs  typestate.rs
crates/apex-cpg/src/query/: builtins.rs  executor.rs  mod.rs  parser.rs
crates/apex-detect/: Cargo.toml
crates/apex-detect/src/: a11y_scan.rs  analyzer_registry.rs  api_coverage.rs  api_diff.rs  bench_diff.rs  compound_report.rs  config.rs  config_drift.rs  container_scan.rs  context.rs  cost_estimate.rs  cvss.rs  dep_graph.rs  doc_coverage.rs  finding.rs  hunt_hints.rs  i18n_check.rs  iac_scan.rs  incident_match.rs  lib.rs  llm_triage.rs  mem_check.rs  migration_check.rs  perf_diff.rs  pipeline.rs  ratchet.rs  report.rs  resource_profile.rs  runbook_check.rs  sarif.rs  sbom.rs  schema_check.rs  service_map.rs  slo_check.rs  test_data.rs  threat_model.rs  trace_analysis.rs  vuln_pipeline.rs  yaml_rules.rs
crates/apex-detect/src/compliance/: asvs.rs  mod.rs  ssdf.rs
crates/apex-detect/src/detectors/: algorithmic_complexity.rs  bandit.rs  blocking_io_in_async.rs  broad_exception.rs  broken_access.rs  command_injection.rs  connection_in_loop.rs  crypto_failure.rs  csrf.rs  data_transform_spec.rs  dep_audit.rs  discarded_async_result.rs  dual_encoder.rs  duplicated_fn.rs  error_context_loss.rs  ffi_panic.rs  file_upload.rs  flag_hygiene.rs  hagnn.rs  hardcoded_env_values.rs  hardcoded_secret.rs  hash_collision_risk.rs  info_exposure.rs  insecure_deserialization.rs  js_command_injection.rs  js_crypto_failure.rs  js_insecure_deser.rs  js_path_traversal.rs  js_sql_injection.rs  js_ssrf.rs  js_timeout.rs  license_scan.rs  missing_async_timeout.rs  missing_shutdown_handler.rs  mixed_bool_ops.rs  mod.rs  multi_command_injection.rs  multi_crypto_failure.rs  multi_insecure_deser.rs  multi_path_traversal.rs  (+32 more)
crates/apex-detect/src/supply_chain/: ci_audit.rs  diff.rs  inspect.rs  lifecycle.rs  mod.rs  namescan.rs  resolve.rs  risk.rs  tree.rs
crates/apex-detect/src/threat/: mod.rs  stride.rs
crates/apex-fuzz/: Cargo.toml
crates/apex-fuzz/src/: cmplog.rs  control.rs  corpus.rs  de_scheduler.rs  directed.rs  ensemble.rs  grammar.rs  hgfuzzer.rs  lib.rs  mutators.rs  perf_feedback.rs  perf_strategy.rs  plugin.rs  qemu_backend.rs  scheduler.rs  seed_archive.rs  seedmind.rs  semantic_feedback.rs  shrinker.rs  thompson.rs  traits.rs
crates/apex-fuzz/src/harness/: csharp.rs  swift.rs
crates/apex-index/: Cargo.toml
crates/apex-index/src/: analysis.rs  c_cpp.rs  change_impact.rs  csharp.rs  dead_code.rs  flaky.rs  flaky_repair.rs  go.rs  javascript.rs  kotlin.rs  lib.rs  python.rs  regex_extract.rs  ruby.rs  rust.rs  spec_mining.rs  swift.rs  types.rs
crates/apex-instrument/: Cargo.toml
crates/apex-instrument/src/: c_coverage.rs  csharp.rs  go.rs  import.rs  java.rs  javascript.rs  lcov_export.rs  lib.rs  llvm.rs  llvm_coverage.rs  mutant.rs  python.rs  ruby.rs  rust_cov.rs  rustc_wrapper.rs  source_map.rs  swift.rs  ts_instrument.rs  v8_coverage.rs  wasm.rs
crates/apex-lang/: Cargo.toml
crates/apex-lang/src/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  js_env.rs  kotlin.rs  lib.rs  probe_impl.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  wasm.rs
crates/apex-reach/: Cargo.toml
crates/apex-reach/src/: engine.rs  entry_points.rs  graph.rs  lib.rs
crates/apex-reach/src/extractors/: csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs
crates/apex-rpc/: Cargo.toml
crates/apex-rpc/src/: coordinator.rs  interceptor.rs  lib.rs  worker.rs
crates/apex-sandbox/: Cargo.toml
crates/apex-sandbox/src/: bitmap.rs  firecracker.rs  javascript.rs  lib.rs  process.rs  python.rs  ruby.rs  rust_test.rs  sancov_rt.rs  shim.rs  shm.rs
crates/apex-symbolic/: Cargo.toml
crates/apex-symbolic/src/: bitwuzla_solver.rs  bmc.rs  cache.rs  diversity.rs  gradient.rs  landscape.rs  lib.rs  llm_solver.rs  path_decomp.rs  portfolio.rs  smtlib.rs  solver.rs  summaries.rs  traits.rs
crates/apex-synth/: Cargo.toml
crates/apex-synth/src/: c_test.rs  classify.rs  cot.rs  coverup.rs  cpg_context.rs  eliminate.rs  error_classify.rs  go.rs  gtest.rs  jest.rs  junit.rs  kotlin.rs  lib.rs  llm.rs  mutation_gen.rs  perf_prompts.rs  property.rs  python.rs  rspec.rs  rust.rs  strategy.rs  wasm.rs  xctest.rs  xunit.rs
python/: pyproject.toml
python/apex_cli/: __init__.py
(+439 files in other folders)
