[workspace]
resolver = "2"

members = [
    "crates/apex-core",
    "crates/apex-coverage",
    "crates/apex-instrument",
    "crates/apex-lang",
    "crates/apex-sandbox",
    "crates/apex-agent",
    "crates/apex-synth",
    "crates/apex-symbolic",
    "crates/apex-concolic",
    "crates/apex-fuzz",
    "crates/apex-detect",
    "crates/apex-rpc",
    "crates/apex-cli",
    "crates/apex-mir",
    "crates/apex-index",
    "crates/apex-cpg",
    "crates/apex-reach",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["AD <allexdav@gmail.com>"]
license = "MIT"
repository = "https://github.com/sahajamoth/apex"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
mockall = "0.13"
proptest = "1"
async-trait = "0.1"

[profile.dev]
debug = "line-tables-only"       # file:line backtraces, no variable inspection (~60% smaller)
split-debuginfo = "unpacked"     # skip dsymutil on macOS (faster incremental linking)
incremental = true               # already default, but be explicit

[profile.dev.package."*"]
opt-level = 1                    # slightly optimize deps — faster test execution, minimal compile cost

[profile.release]
lto = true
codegen-units = 1
