[package]
name = "apex-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI agent orchestration and test refinement for APEX"

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
apex-symbolic = { path = "../apex-symbolic" }
tracing = { workspace = true }
futures = "0.3"
async-trait = { workspace = true }
rand = "0.9"
rand_distr = "0.5"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
mockall = { workspace = true }
tracing-subscriber = "0.3"
