[package]
name = "apex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for APEX — autonomous path exploration tool"

[lib]
name = "apex_cli"
path = "src/lib.rs"

[[bin]]
name = "apex"
path = "src/main.rs"

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
apex-instrument = { path = "../apex-instrument" }
apex-lang = { path = "../apex-lang" }
apex-sandbox = { path = "../apex-sandbox" }
apex-agent = { path = "../apex-agent" }
apex-synth = { path = "../apex-synth" }
apex-symbolic = { path = "../apex-symbolic" }
apex-concolic = { path = "../apex-concolic" }
apex-fuzz = { path = "../apex-fuzz" }
apex-cpg = { path = "../apex-cpg" }
apex-detect = { path = "../apex-detect" }
apex-index = { path = "../apex-index" }
apex-reach = { path = "../apex-reach" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
scopeguard = "1"
rmcp = { version = "1", features = ["server", "transport-io", "macros", "schemars"] }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
