[package]
name = "apex-concolic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Concolic execution engine for APEX"

[features]
# Enable real pyo3 concolic extension module.
pyo3-tracer = ["pyo3"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
apex-symbolic = { path = "../apex-symbolic" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex-lite = "0.1"

# Feature-gated: only with --features pyo3-tracer
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
