[package]
name = "apex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, configuration, and error handling for APEX"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bytes = { version = "1", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
tokio = { workspace = true }

[dependencies.tempfile]
version = "3"

[dev-dependencies]
mockall = { workspace = true }
