[package]
name = "apex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, configuration, and error handling for APEX"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
bytes = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
