[package]
name = "apex-coverage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage oracle and bitmap-based edge tracking for APEX"

[dependencies]
apex-core = { path = "../apex-core" }
dashmap = "5"
regex = "1"
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
