[package]
name = "apex-cpg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code Property Graph (AST + CFG + REACHING_DEF) with taint analysis for APEX"

[dependencies]
anyhow = { workspace = true }
regex = "1"
serde = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
