[package]
name = "apex-cpg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code Property Graph (AST + CFG + REACHING_DEF) with taint analysis for APEX"

[features]
default = []
treesitter = ["dep:tree-sitter", "dep:tree-sitter-python"]

[dependencies]
anyhow = { workspace = true }
apex-core = { path = "../apex-core" }
regex = "1"
serde = { workspace = true }
toml = "0.8"
tree-sitter = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }

[dev-dependencies]
tempfile = "3"
