[package]
name = "apex-detect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bug detection and security analysis pipeline for APEX"

[features]
default = []
gnn = ["ort"]
ml = ["ort"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-cpg = { path = "../apex-cpg" }
apex-coverage = { path = "../apex-coverage" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { workspace = true }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
# Feature-gated: only with --features gnn or ml
ort = { version = "2.0.0-rc.12", optional = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
