[package]
name = "apex-detect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bug detection and security analysis pipeline for APEX"

[features]
default = []
gnn = ["ort"]
ml = ["ort"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-cpg = { path = "../apex-cpg" }
apex-coverage = { path = "../apex-coverage" }
async-trait = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
serde_yaml = "0.9"
apex-reach = { path = "../apex-reach" }
# Feature-gated: only with --features gnn or ml
ort = { version = "2.0.0-rc.12", optional = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
