[package]
name = "apex-fuzz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage-guided fuzzing with MOpt scheduling for APEX"

[features]
# Enable real libafl fuzzer backend.
libafl-backend = ["libafl", "libafl_bolts"]
# Enable QEMU-based binary fuzzing (Linux only).
libafl-qemu = ["libafl", "libafl_bolts"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
apex-index = { path = "../apex-index" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
rand = "0.8"
rand_distr = "0.4"
regex = "1"

# Feature-gated: only with --features libafl-backend
libafl = { version = "0.13", optional = true }
libafl_bolts = { version = "0.13", optional = true }

[dev-dependencies]
proptest = { workspace = true }
