[package]
name = "apex-fuzz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage-guided fuzzing with MOpt scheduling for APEX"

[features]
# Enable real libafl fuzzer backend.
libafl-backend = ["libafl", "libafl_bolts"]
# Enable QEMU-based binary fuzzing (Linux only).
libafl-qemu = ["libafl", "libafl_bolts"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
apex-index = { path = "../apex-index" }
rand = "0.9"
rand_distr = "0.5"
regex = "1"

# Feature-gated: only with --features libafl-backend
libafl = { version = "0.13", optional = true }
libafl_bolts = { version = "0.13", optional = true }

[dev-dependencies]
proptest = { workspace = true }
