[package]
name = "apex-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-test branch index for APEX SDLC intelligence commands"

[dependencies]
apex-core = { path = "../apex-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = "0.10"
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
