[package]
name = "apex-instrument"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-language instrumentation for APEX (Python, JS, Java, Rust, LLVM, WASM)"

[features]
llvm-instrument = ["inkwell", "addr2line", "gimli", "object"]
wasm-instrument = []

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
apex-lang = { path = "../apex-lang" }
regex = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tempfile = "3"
tracing = "0.1"
async-trait = "0.1"
sourcemap = "9"

# optional LLVM feature-gated deps
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true }
addr2line = { version = "0.21", optional = true }
gimli = { version = "0.28", optional = true }
object = { version = "0.32", optional = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
