[package]
name = "apex-instrument"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-language instrumentation for APEX (Python, JS, Java, Rust, LLVM, WASM)"

[features]
llvm-instrument = ["dep:inkwell", "dep:addr2line", "dep:gimli", "dep:object"]
wasm-instrument = []
frida = ["dep:frida-gum", "dep:addr2line", "dep:gimli", "dep:object"]
ts-instrument = ["dep:tree-sitter", "dep:tree-sitter-python", "dep:tree-sitter-javascript", "dep:tree-sitter-go"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-lang = { path = "../apex-lang" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tempfile = "3"
tracing = { workspace = true }
async-trait = { workspace = true }
sourcemap = "9"

# optional tree-sitter feature-gated deps
tree-sitter = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

# optional LLVM feature-gated deps
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true }
addr2line = { version = "0.21", optional = true }
gimli = { version = "0.28", optional = true }
object = { version = "0.32", optional = true }

# optional Frida feature-gated deps
frida-gum = { version = "0.14", optional = true, features = ["stalker-params", "stalker-observer", "event-sink"] }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
