[package]
name = "apex-lang"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language-specific test runners for APEX"

[features]
wasm-instrument = []

[dependencies]
apex-core = { path = "../apex-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
