[package]
name = "apex-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC distributed coordination for APEX"

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
serde = { workspace = true }
thiserror = { workspace = true }
tonic = "0.11"
prost = "0.12"
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
