[package]
name = "apex-synth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Template-based test synthesis for APEX"

[dependencies]
apex-core = { path = "../apex-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tera = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
