[package]
name = "apex-synth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Template-based test synthesis for APEX"

[dependencies]
apex-core = { path = "../apex-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tera = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
